[tool.poetry]
name = "phase-space-density-visualisator"
version = "0.1.0"
description = ""
authors = ["Adrien Marjollet <adrien.marjollet1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.2"
scipy = "^1.15.1"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
